fixing responsive features. Projects now column align at small width

--- a/style/index.css
+++ b/style/index.css
@@ -106,6 +106,8 @@ STATE
 .portfolio-header, .about-header {
   display: flex;
   justify-content: center;
+  width: 100%;
+  margin-bottom: 20px;
   text-align: center;
   font-family: 'Goudy Bookletter 1911', serif;
   color: #DDD;
@@ -154,6 +156,10 @@ STATE
 .up {
   transform: rotate(.5turn);
 }
+
+.indv-projects {
+
+}
 /*ABOUT SECTION*/
 
 #about-header {
@@ -192,11 +198,17 @@ STATE
 }
 /* Footer */
 /*Media Queries*/
-@media and (max-width: 600px) {
-section#portfolio.tab-content {
+@media all and (max-width: 600px) {
+#portfolio.tab-content {
   flex-direction: column;
 }
 #title h1 {
-  font-size: 10px;
+  font-size: 2em;
 }
+}
+
+@media all and (max-width: 900px) {
+  #title h1 {
+    font-size: 5em;
+  }
 }
